gphoto2 2.5.6.1 snapshot

* updated translations: french, ukrainian, vietnamese, russian, polish, dutch

gphoto2 2.5.6

* --wait-event / --wait-event-and-download can now wait for strings
  --wait-event=CAPTURECOMPLETE
  --wait-event=FILEADDED
  --wait-event="Property 5001"
* updated translations: french, ukrainian, dutch, polish, russian, vietnamese, hungarian, serbian

gphoto2 2.5.5

* manpage updated
* updated translations
* bugfix for DST usage in handling date/time widgets
* adjusted wait time heuristics after capture
* --debug-loglevel=(debug|verbose|data|all) option added to select debug verbosity
* fixed --filename with cross-device usage

gphoto2 2.5.4

* --skip-existing option that skips if a local file would already exist
* %F for foldername inclusion added to format strings for --filename
* add the commandline arguments to the debug log

gphoto2 2.5.3

* translations updated: dutch, polish, ukrainian, russian, taiwanese
* small --show-info bugfix

gphoto2 2.5.2

* new --reset option to reset usb devices.
* using --filename, if the camera reports 1. Jan 1970, fall back to
  use the current date/time.
* translations updated: french, polish, vietnamese, russian, simplified chinese, danish

gphoto2 2.5.1

 * Fixed that the meaning of --keep and --no-keep was switched.

 * Allow passing absolute filenames to
   -p, -d, -r/--rmdir, -m/--mkdir, -t, --show-info, --get-metadata,
   --get-raw-data, --get-audio-data,

   like e.g.:
   gphoto2 -p /store_00010001/DCIM/100D7000/DSC_0001.JPG

 * -L --quiet  now prints a list of all files, 1 per line.
 * -l --quiet  now prints a list of all folders, 1 per line.

gphoto2 2.5.0

 * Added "--keep" and "--no-keep" options for capture tethered
   and capture image.

 * --wait-event and --capture-tethered can now do:
   * nr of events (200)
   * seconds      (100s)
   * milliseconds (200ms) (1/1000 of a second)
   * frames       (50f) (number of images)

 * New --list-all-config gives the full config tree.

gphoto2 2.4.99.2
