@@ -35,7 +35,8 @@ typedef enum {
 	FLAGS_NEW		= 1 << 6,
 	FLAGS_RESET_CAPTURE_INTERVAL = 1 << 7,
 	FLAGS_KEEP 		= 1 << 8,
-	FLAGS_SKIP_EXISTING	= 1 << 9
+	FLAGS_KEEP_RAW 		= 1 << 9,
+	FLAGS_SKIP_EXISTING	= 1 << 10
 } Flags;
 
 typedef enum {
